--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
+            android:name=".miniProject.test0703.mjs1003_mini.Mjs1003LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.mjs1003_mini.Mjs1003SplashActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.mjs1003_mini.Mjs1003JoinActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.mjs1003_mini.Mjs1003MainActivity"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0703.test0101_mini.Test0101JoinActivity"
             android:exported="false" />
         <activity
