--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
+            android:name=".miniProject.test0703.ngy0428_mini.Ngy0428SplashActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ngy0428_mini.Ngy0428JoinActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ngy0428_mini.Ngy0428MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ngy0428_mini.Ngy0428LoginActivity"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0703.test0101_mini.Test0101JoinActivity"
             android:exported="false" />
         <activity
