--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,20 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
-            android:name=".miniProject.test0703.test0101_mini.Test0101JoinActivity"
-            android:exported="false" />
+            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity"
+            android:exported="true" />
         <activity
-            android:name=".miniProject.test0703.lsy1205_mini.Lsy1205SplashActivity"
-            android:exported="false" />
+            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918SplashActivity"
+            android:exported="true" />
         <activity
-            android:name=".miniProject.test0703.lsy1205_mini.Lsy1205MainActivity"
-            android:exported="false" />
+            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918MainActivity"
+            android:exported="true" />
         <activity
-            android:name=".miniProject.test0703.lsy1205_mini.Lsy1205LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".miniProject.test0703.lsy1205_mini.Lsy1205JoinActivity"
-            android:exported="false" />
+            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918LoginActivity"
+            android:exported="true" />
+<!--        <activity-->
+<!--            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity"-->
+<!--            android:exported="true" />-->
         <activity
             android:name=".ch06.Ch06Test2Activity"
             android:exported="true" />
