--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
-            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity"
+            android:name=".miniProject.test0703.nhj0918_mini.Nhj0918JoinActivity"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918SplashActivity"
+            android:name=".miniProject.test0703.nhj0918_mini.Nhj0918SplashActivity"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918MainActivity"
+            android:name=".miniProject.test0703.nhj0918_mini.Nhj0918MainActivity"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918LoginActivity"
+            android:name=".miniProject.test0703.nhj0918_mini.Nhj0918LoginActivity"
             android:exported="true" />
 <!--        <activity-->
 <!--            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity"-->
