로그인&회원가입 만들기 AndroidLabTest501 앱에 버그가 있다고 나옵니다.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.ngy0428_mini.Ngy0428LoginActivity"
-
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0703.kdk1115_mini.Kdk1115JoinActivity"
             android:exported="true" />
         <activity
