--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31" >
-      
+
+        <activity
+            android:name=".miniProject.test0703.ksy1028_mini.Ksy1028SplashActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ksy1028_mini.Ksy1028MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ksy1028_mini.Ksy1028LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ksy1028_mini.Ksy1028JoinActivity"
+            android:exported="true" />
+
         <activity
             android:name=".miniProject.test0703.lsj0918_mini.Lsj0918SplashActivity"
             android:exported="true" />
@@ -28,9 +41,7 @@
         <activity
             android:name=".miniProject.test0703.test0101_mini.Test0101JoinActivity"
             android:exported="false" />
-        <activity>
-            android:name=".miniProject.test0703.lhs0418_mini.Lhs0418MainActivity"
-            android:exported="true" />
+
         <activity
 
             android:name=".miniProject.test0703.lhj0728_mini.Lhj0728SplashActivity"
@@ -53,16 +64,7 @@
         <activity
             android:name=".miniProject.test0703.lsy1205_mini.Lsy1205SplashActivity"
             android:exported="false" />
-        <activity
-            android:name=".miniProject.test0703.lhs0418_mini.Lhs0418SplashActivity"
-            android:exported="true" />
 
-        <activity
-            android:name=".miniProject.test0703.lhs0418_mini.Lhs0418LoginActivity"
-            android:exported="true" />
-        <activity
-            android:name=".miniProject.test0703.lhs0418_mini.Lhs0418JoinActivity"
-            android:exported="true" />
         <activity
 
             android:name=".miniProject.test0703.ngy0428_mini.Ngy0428SplashActivity"
