--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,20 @@
         <activity
             android:name=".miniProject.test0703.lsj0918_mini.Lsj0918JoinActivity"
             android:exported="true" />
+
+        <activity
+            android:name=".miniProject.test0703.ksb0109_mini.ksb0109JoinActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ksb0109_mini.ksb0109LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ksb0109_mini.ksb0109MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.ksb0109_mini.ksb0109SplashActivity"
+            android:exported="true" />
+
         <activity
             android:name=".miniProject.test0703.test0101_mini.Test0101JoinActivity"
             android:exported="false" />
@@ -65,6 +79,7 @@
             android:name=".miniProject.test0703.lsy1205_mini.Lsy1205SplashActivity"
             android:exported="false" />
 
+
         <activity
 
             android:name=".miniProject.test0703.ngy0428_mini.Ngy0428SplashActivity"
@@ -81,15 +96,7 @@
         <activity
             android:name=".miniProject.test0703.kdk1115_mini.kdk1115JoinActivity"
             android:exported="true" />
-        <activity
-            android:name=".miniProject.test0703.kdk1115_mini.kdk1115SplashActivity"
-            android:exported="true" />
-        <activity
-            android:name=".miniProject.test0703.kdk1115_mini.kdk1115LoginActivity"
-            android:exported="true" />
-        <activity
-            android:name=".miniProject.test0703.kdk1115_mini.kdk1115MainActivity"
-            android:exported="true" />
+
 
         <activity
             android:name=".miniProject.test0703.ohj0106_mini.Ohj0106SplashActivity"
