--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,8 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLabTest501"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".miniProject.test0703.Lhs0418_mini.Lhs0418SplashActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.Lhs0418_mini.Lhs0418MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.Lhs0418_mini.Lhs0418LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.Lhs0418_mini.Lhs0418JoinActivity"
+            android:exported="true" />
         <activity
             android:name=".miniProject.test0703.ksy1028_mini.Ksy1028SplashActivity"
             android:exported="true" />
@@ -25,7 +36,6 @@
         <activity
             android:name=".miniProject.test0703.ksy1028_mini.Ksy1028JoinActivity"
             android:exported="true" />
-
         <activity
             android:name=".miniProject.test0703.lsj0918_mini.Lsj0918SplashActivity"
             android:exported="true" />
@@ -41,11 +51,9 @@
         <activity
             android:name=".miniProject.test0703.test0101_mini.Test0101JoinActivity"
             android:exported="false" />
-
         <activity
-
             android:name=".miniProject.test0703.lhj0728_mini.Lhj0728SplashActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -64,9 +72,7 @@
         <activity
             android:name=".miniProject.test0703.lsy1205_mini.Lsy1205SplashActivity"
             android:exported="false" />
-
         <activity
-
             android:name=".miniProject.test0703.ngy0428_mini.Ngy0428SplashActivity"
             android:exported="true" />
         <activity
@@ -75,9 +81,7 @@
         <activity
             android:name=".miniProject.test0703.ngy0428_mini.Ngy0428MainActivity"
             android:exported="true" />
-        <activity
-            android:name=".miniProject.test0703.ngy0428_mini.Ngy0428LoginActivity"
-            />
+        <activity android:name=".miniProject.test0703.ngy0428_mini.Ngy0428LoginActivity" />
         <activity
             android:name=".miniProject.test0703.kdk1115_mini.kdk1115JoinActivity"
             android:exported="true" />
@@ -90,7 +94,6 @@
         <activity
             android:name=".miniProject.test0703.kdk1115_mini.kdk1115MainActivity"
             android:exported="true" />
-
         <activity
             android:name=".miniProject.test0703.ohj0106_mini.Ohj0106SplashActivity"
             android:exported="true" />
@@ -112,7 +115,6 @@
         <activity
             android:name=".miniProject.test0703.mjs1003_mini.Mjs1003JoinActivity"
             android:exported="true" />
-
         <activity
             android:name=".miniProject.test0703.mjs1003_mini.Mjs1003MainActivity"
             android:exported="true" />
@@ -127,7 +129,6 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.kms0828_mini.Kms0828JoinActivity"
-
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.lcs0806_mini.Lcs0806LoginActivity"
@@ -170,10 +171,9 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.nhj0918_mini.Nhj0918LoginActivity"
-            android:exported="true" />
-<!--        <activity-->
-<!--            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity"-->
-<!--            android:exported="true" />-->
+            android:exported="true" /> <!-- <activity -->
+        <!-- android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity" -->
+        <!-- android:exported="true" /> -->
         <activity
             android:name=".ch06.Ch06Test2Activity"
             android:exported="false" />
@@ -188,7 +188,6 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-
             android:exported="false" />
     </application>
 
