6교시, 미니실습 풀이 및, 인트로 화면, 로그인,회원가입,메인화면, 인텐트 이용해서 이동하기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,11 +46,7 @@
 
             android:name=".miniProject.test0703.lhj0728_mini.Lhj0728SplashActivity"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".miniProject.test0703.lhj0728_mini.Lhj0728MainActivity"
@@ -63,7 +59,24 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.lsy1205_mini.Lsy1205SplashActivity"
-            android:exported="false" />
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".miniProject.test0703.lsy1205_mini.Lsy1205JoinActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.lsy1205_mini.Lsy1205MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.lsy1205_mini.Lsy1205LoginActivity"
+            android:exported="true" />
 
         <activity
 
