--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31" >
         <activity
+            android:name=".miniProject.test0703.Lhs0418_mini.Lhs0418SplashActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.Lhs0418_mini.Lhs0418MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.Lhs0418_mini.Lhs0418LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.Lhs0418_mini.Lhs0418JoinActivity"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0703.ksy1028_mini.Ksy1028SplashActivity"
             android:exported="true" />
         <activity
