--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLabTest501"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".miniProject.test0703.msy0402_mini.Msy0402SplashActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.msy0402_mini.Msy0402MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.msy0402_mini.Msy0402LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0703.msy0402_mini.Msy0402JoinActivity"
+            android:exported="true" />
         <activity
             android:name=".miniProject.test0703.ksy1028_mini.Ksy1028SplashActivity"
             android:exported="true" />
@@ -24,7 +36,6 @@
         <activity
             android:name=".miniProject.test0703.ksy1028_mini.Ksy1028JoinActivity"
             android:exported="true" />
-
         <activity
             android:name=".miniProject.test0703.lsj0918_mini.Lsj0918SplashActivity"
             android:exported="true" />
@@ -37,7 +48,6 @@
         <activity
             android:name=".miniProject.test0703.lsj0918_mini.Lsj0918JoinActivity"
             android:exported="true" />
-
         <activity
             android:name=".miniProject.test0703.ksb0109_mini.ksb0109JoinActivity"
             android:exported="true" />
@@ -50,17 +60,12 @@
         <activity
             android:name=".miniProject.test0703.ksb0109_mini.ksb0109SplashActivity"
             android:exported="true" />
-
         <activity
             android:name=".miniProject.test0703.test0101_mini.Test0101JoinActivity"
             android:exported="false" />
-
         <activity
-
             android:name=".miniProject.test0703.lhj0728_mini.Lhj0728SplashActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".miniProject.test0703.lhj0728_mini.Lhj0728MainActivity"
             android:exported="true" />
@@ -72,14 +77,12 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.lsy1205_mini.Lsy1205SplashActivity"
-            android:exported="true" >
-
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".miniProject.test0703.lsy1205_mini.Lsy1205JoinActivity"
@@ -90,10 +93,7 @@
         <activity
             android:name=".miniProject.test0703.lsy1205_mini.Lsy1205LoginActivity"
             android:exported="true" />
-
-
         <activity
-
             android:name=".miniProject.test0703.ngy0428_mini.Ngy0428SplashActivity"
             android:exported="true" />
         <activity
@@ -102,14 +102,10 @@
         <activity
             android:name=".miniProject.test0703.ngy0428_mini.Ngy0428MainActivity"
             android:exported="true" />
-        <activity
-            android:name=".miniProject.test0703.ngy0428_mini.Ngy0428LoginActivity"
-            />
+        <activity android:name=".miniProject.test0703.ngy0428_mini.Ngy0428LoginActivity" />
         <activity
             android:name=".miniProject.test0703.kdk1115_mini.kdk1115JoinActivity"
             android:exported="true" />
-
-
         <activity
             android:name=".miniProject.test0703.ohj0106_mini.Ohj0106SplashActivity"
             android:exported="true" />
@@ -131,7 +127,6 @@
         <activity
             android:name=".miniProject.test0703.mjs1003_mini.Mjs1003JoinActivity"
             android:exported="true" />
-
         <activity
             android:name=".miniProject.test0703.mjs1003_mini.Mjs1003MainActivity"
             android:exported="true" />
@@ -146,7 +141,6 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.kms0828_mini.Kms0828JoinActivity"
-
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.lcs0806_mini.Lcs0806LoginActivity"
@@ -189,10 +183,9 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.nhj0918_mini.Nhj0918LoginActivity"
-            android:exported="true" />
-<!--        <activity-->
-<!--            android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity"-->
-<!--            android:exported="true" />-->
+            android:exported="true" /> <!-- <activity -->
+        <!-- android:name=".miniProject.test0703.Nhj0918_mini.Nhj0918JoinActivity" -->
+        <!-- android:exported="true" /> -->
         <activity
             android:name=".ch06.Ch06Test2Activity"
             android:exported="false" />
@@ -207,7 +200,6 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-
             android:exported="false" />
     </application>
 
