--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
-            android:name=".miniProject.test0709.lsy1205_mini.Ch11MainRecyclerView1Activity"
+            android:name=".miniProject.test0709.kms0828_mini.kms0828Ch11MainRecyclerView1Activity"
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.msy0402_mini.Msy0402SplashActivity"
