--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,27 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
+            android:name=".miniProject.test0709.lhj0815_mini.Ch11MyViewHolder3"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0709.lhj0815_mini.Ch11MyAdapterSample3"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0709.lhj0815_mini.Ch11MyViewHolder2"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0709.lhj0815_mini.Ch11MyViewHolder"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0709.lhj0815_mini.Ch11MyAdapterSample2"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0709.lhj0815_mini.Ch11MyAdapterSample"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0709.lhj0815_mini.Ch11MainRecyclerView1Activity"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0709.lsy1205_mini.Ch11MainRecyclerView1Activity"
             android:exported="true" />
         <activity
