--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31" >
         <activity
+            android:name=".miniProject.test0709.kms0828_mini.kms0828Ch11MainRecyclerView1Activity"
+            android:exported="true"/>
+        <activity
             android:name=".miniProject.test0709.lhs0418_mini.Ch11Lhs0418MainRecyclerView1Activity"
             android:exported="true" />
         <activity
@@ -49,7 +52,10 @@
             android:name=".miniProject.test0709.lhj0815_mini.Ch11MainRecyclerView1Activity"
             android:exported="true" />
         <activity
-            android:name=".miniProject.test0709.kms0828_mini.kms0828Ch11MainRecyclerView1Activity"
+            android:name=".miniProject.test0709.lsj0918_mini.lsj0918Ch11MainRecyclerView1Activity"
+            android:exported="true"  />
+        <activity
+            android:name=".miniProject.test0709.lsy1205_mini.Ch11MainRecyclerView1Activity"
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.msy0402_mini.Msy0402SplashActivity"
@@ -252,7 +258,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-<!--        .-->
+        <!--        .-->
     </application>
 
 </manifest>
