--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".miniProject.test0709.ohj0106_mini.ohj_Ch11MainRecyclerView1Activity"
-            android:exported="false" />
-        <activity
-            android:name=".miniProject.test0709.ohj0106_mini.MainActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".miniProject.test0709.lhj0728_mini.Lhj0728RecyclerViewActivity"
             android:exported="true" />
