--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31" >
         <activity
+            android:name=".miniProject.test0709.lcs0806_mini.Lcs0806_Ch11MainRecyclerView1Activity"
+            android:exported="true"/>
+        <activity
             android:name=".miniProject.test0709.lhj0728_mini.Lhj0728RecyclerViewActivity"
             android:exported="true"/>
         <activity
