문수연 pr보냅니다!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,30 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31">
         <activity
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11MainFragmentActivity"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11PagerAdapter"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11ThreeFragment"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11TwoFragment"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.Ch11OneFragment"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_three"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_two"
+            android:exported="true" />
+        <activity
+            android:name=".miniProject.test0710_msy0402.msy0402_mini.fragment_ch11_one"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0709.lcs0806_mini.Lcs0806_Ch11MainRecyclerView1Activity"
             android:exported="true" />
         <activity
@@ -23,7 +47,7 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0709.lcs0806_mini.Lcs0806_Ch11MainRecyclerView1Activity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".miniProject.test0709.lhj0728_mini.Lhj0728RecyclerViewActivity"
             android:exported="true" />
@@ -143,7 +167,7 @@
             android:exported="true" />
         <activity
             android:name=".miniProject.test0703.test0101_mini.Test0101JoinActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".miniProject.test0703.lhj0728_mini.Lhj0728SplashActivity"
             android:exported="true" />
@@ -269,19 +293,19 @@
         <!-- android:exported="true" /> -->
         <activity
             android:name=".ch06.Ch06Test2Activity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ch06.Ch06TestActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".ch06.Ch6MainActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".TestActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true" />
     </application>
 
 </manifest>
