--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31" >
         <activity
+            android:name=".miniProject.test0710.lhs0418_mini.Ch11Lhs0418Viewpager2TestFragmentMainActivity"
+            android:exported="true" />
+        <activity
             android:name=".miniProject.test0709.lhs0418_mini.Ch11Lhs0418MainRecyclerView1Activity"
             android:exported="true" />
         <activity
