--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31" >
+        <activity android:name=".miniProject.test0710.ksb0109_mini.viewpage2.adapter.KsbCh11Viewpager2TestFragmentMainActivity"
+            android:exported="true"/>
         <activity android:name=".miniProject.test0710.kms0828_mini.kms0828Viewpager2MainActivity"
             android:exported="true"/>
         <activity
