--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLabTest501"
         tools:targetApi="31" >
+
+        <activity
+            android:name=".miniProject.test0710.lcs0806_mini.Lcs0806Ch11Viewpager2TestFragmentMainActivity"
+            android:exported="true" />
         <activity
             android:name=".miniProject.test0710.kdk1115_mini.viewpage2.adapter.KdkCh11Viewpager2TestFragmentMainActivity"
             android:exported="true" />
